--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test='shoppingList'>Facewash</li>
+		<li data-ns-test='shoppingList'>Facemask</li>
+		<li data-ns-test='shoppingList'>Faceserum</li>
+	</ol>
+	<ul>
+		<li data-ns-test='holidayList'>NimKaroli</li>
+		<li data-ns-test='holidayList'>Haridwar</li>
+		<li data-ns-test='holidayList'>Muzaffarpur</li>
+
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
